# chalkydri

./: .gitignore  .gitmodules  .tokeignore  Cargo.toml  Makefile  README.md  build.rs  build.sh  chalkydri.ron  chalkydri.toml  field.json  layout.json  rust-toolchain.toml  testytest_0.copper  testytest_2.copper
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: build.yml  containers.yml  image.yml  mdbook.yml  pi.yml  test.yml
app/: README.md  pubspec.yaml
app/android/app/: build.gradle
app/android/app/src/main/: AndroidManifest.xml
app/android/app/src/main/kotlin/com/example/chalkydri_manager/: MainActivity.kt
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: devices.dart  main.dart  menu.dart  utils.dart
app/linux/: CMakeLists.txt  my_application.cc
app/macos/Runner.xcodeproj/: project.pbxproj
app/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
app/macos/Runner/Configs/: AppInfo.xcconfig
app/test/: widget_test.dart
app/web/: index.html  manifest.json
app/windows/: CMakeLists.txt
app/windows/runner/: Runner.rc  main.cpp
book/: book.toml
book/src/: SUMMARY.md  getting_started.md  index.md  networktables.md
book/src/design/: index.md
book/src/getting_started/: index.md  raspberry_pi.md
book/src/internals/: index.md
book/src/maintenance/: apriltags.md  build.md  devenv.md  index.md  learning.md  platforms.md  releasing.md  subprojects.md  values.md
chalkydri-apriltags/: build.rs
chalkydri-apriltags/src/: lib.rs  main.rs  myalgo.rs
chalkydri-tfledge/src/: error.rs  gen.rs  interpreter.rs  main.rs  model.rs  quad.rs  tensor.rs
config/: calibration.ron
crates/aaec/: Cargo.toml  README.md
crates/aaec/src/: main.rs
crates/apriltags/: Cargo.toml
crates/apriltags/src/: field_layout.rs  lib.rs
crates/chalkydri/: Cargo.toml  build.rs  copperconfig.ron
crates/chalkydri-apriltags/: Cargo.toml  README.md  bench.rs  build.rs
crates/chalkydri-apriltags/src/: lib.rs  main.rs  myalgo.rs  pose_estimation.rs  utils.rs
crates/chalkydri-slam/: Cargo.toml
crates/chalkydri-slam/src/: main.rs
crates/chalkydri-tfledge/: Cargo.toml  README.md  build.rs
crates/chalkydri-tfledge/src/: device.rs  error.rs  gen.rs  interpreter.rs  lib.rs  main.rs  model.rs  tensor.rs
crates/chalkydri/src/: comm.rs  config.rs  error.rs  lib.rs  logger.rs  main.rs
crates/chalkydri/src/api/: mod.rs
crates/chalkydri/src/cameras/: gst_to_cu.rs  mjpeg.rs  mod.rs  pipeline.rs  preproc.rs  providers.rs  publisher.rs
crates/chalkydri/src/pose/: field_layout.rs  mod.rs
crates/chalkydri/src/resources/: mod.rs
crates/chalkydri/src/resources/phonyvision/: mod.rs
crates/chalkydri/src/subsystems/: apriltags.rs  calibration.rs  capriltags.rs  manager.rs  mod.rs  monitor.rs
crates/chalkydri/src/subsystems/python/: mod.rs
crates/chalkydri_config/: Cargo.toml
crates/chalkydri_config/src/: lib.rs
crates/chalkydri_core/: Cargo.toml
crates/chalkydri_core/src/: config.rs  error.rs  lib.rs  ntables.rs  preprocs.rs  subsystems.rs
crates/chalkydri_sqpnp/: Cargo.toml
crates/chalkydri_sqpnp/src/: lib.rs  util.rs
crates/chalkydrilib/: Cargo.toml  README.md
crates/chalkydrilib/src/: lib.rs
crates/chalkydrilibj/: Cargo.toml
crates/chalkydrilibj/api/: Camera.java  Chalkydri.java
crates/chalkydrilibj/src/: lib.rs
crates/configurator/: Cargo.toml  build.rs
crates/configurator/src/: calibration.rs  main.rs  monitor.rs  util.rs
crates/minint/: Cargo.toml  README.md
crates/minint/examples/: pub.rs  sub.rs
crates/minint/src/: datatype.rs  error.rs  lib.rs  messages.rs
crates/minint/src/datatype/: bsint.rs  mod.rs
crates/subsystems/capriltags/: Cargo.toml
crates/subsystems/python/: Cargo.toml
crates/subsystems/python/src/: lib.rs
crates/whacknet/: Cargo.toml
crates/whacknet/src/: lib.rs
minint/: .gitignore  Cargo.toml
minint/src/: datatype.rs  lib.rs  messages.rs
scripts/: build-ml.sh  camera_calibration.py  cleanup-ml.sh
src/: api.rs  calibration.rs  cameras.rs  config.rs  error.rs  logger.rs  main.rs  subsystem.rs  update.rs  utils.rs
src/api/: mod.rs
src/cameras/: mjpeg.rs  mod.rs
src/pose/: field_layout.rs  mod.rs
src/subsys/: capriltags.rs  mod.rs
src/subsys/apriltags/: mod.rs
src/subsys/ml/: mod.rs
src/subsys/python/: api.pyi  api.rs  mod.rs
src/subsystems/: capriltags.older  capriltags.rs  manager.rs  mod.rs
src/subsystems/python/: api.pyi  mod.rs
tools/: ntserver.py  pyproject.toml
ui/: openapi.json  package.json  svelte.config.js  tailwind.config.ts
ui/src/: app.css  app.html
ui/src/lib/: calibration.ts  config.ts  index.ts
ui/src/routes/: +layout.svelte  +layout.ts  +page.svelte
ui/src/routes/+components/: Calibration.svelte  Calibration.ts  CameraFeed.svelte  ChalkydriInput.svelte
ui/src/routes/calibration/: +page.svelte  +page.ts
ui/src/routes/camera/[id]/: +page.svelte  +page.ts
ui/src/routes/custom/: +page.svelte  webworker.ts
ui/src/routes/custom/+components/: Editor.svelte
ui/src/routes/settings/: +page.svelte  +page.ts  page.ts
ui/src/routes/settings/+components/: CamConfig.svelte
