[workspace]
resolver = "3"
members = [
  "build",
  "crates/chalkydri_core",
	"crates/chalkydri",
  #"crates/chalkydri-apriltags", 
	#"crates/chalkydri-slam",
  #"crates/chalkydri-tfledge",
  #"crates/chalkydrilib",
  #"crates/chalkydrilibj",
  #"crates/minint",
  "crates/subsystems/capriltags",
  "crates/subsystems/python",
]
default-members = [
  "crates/chalkydri_core",
  "crates/chalkydri",
]

[workspace.package]
license = "AGPL-3.0"
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
tracing = { version = "0.1.41", features = ["log", "async-await"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "tracing-log"] }
nt_client = { git = "https://github.com/DatAsianBoi123/nt_client.git", version = "0.4.0", features = ["struct"] }
once_cell = "1.20.2"

gstreamer = { version = "0.23.4", features = ["v1_22"] }
gstreamer-app = { version = "0.23.4", features = ["v1_22"] }

chalkydri_core = { version = "0.1.0", path = "crates/chalkydri_core" }
chalkydri_subsys_capriltags = { version = "0.1.0", path = "crates/subsystems/capriltags" }
chalkydri_subsys_python = { version = "0.1.0", path = "crates/subsystems/python" }

# Compile dependencies with optimization level 3 even when in debug mode
# This can reduce the time required to build when actively developing and testing.
[profile.dev.package.'*']
opt-level = 3

# Compile everything with extreme optimizations when in release mode
[profile.release]
# Optimization level 3 is the most extreme level of optimization.
# It isn't *always* the most optimized for every codebase, but I haven't bothered testing.
# TODO: do that testing
opt-level = 3
# Link Time Optimization
#lto = true
# Strip extra symbols (used for debugging and such)
strip = true
# Code generation-- only 1 worker generates more optimized code in theory
codegen-units = 1
