[workspace]
resolver = "3"
members = [
  "build",
  "crates/chalkydri_core",
  "crates/chalkydri",
  "crates/apriltags",
  "crates/chalkydri_sqpnp",
  #"crates/chalkydri-apriltags",
  #"crates/chalkydri-slam",
  #"crates/chalkydri-tfledge",
  #"crates/chalkydrilib",
  #"crates/chalkydrilibj",
  #"crates/minint",
  #"crates/subsystems/python",
  "crates/chalkydri_config",
  "crates/whacknet", "crates/aaec", "crates/configurator",
]
default-members = [
  "crates/chalkydri_core",
  "crates/chalkydri",
  "crates/whacknet",
]

[workspace.package]
license = "AGPL-3.0"
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
tracing = { version = "0.1.41", features = ["log", "async-await"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "tracing-log"] }
nt_client = { git = "https://github.com/DatAsianBoi123/nt_client.git", version = "0.4.0", features = ["struct"] }
parking_lot = { version = "0.12.4", features = ["arc_lock", "nightly", "owning_ref", "send_guard"] }
futures-core = "0.3.31"

cu29 = { version = "0.13", features = ["textlogs"] }
cu29-helpers = "0.13"
cu-sensor-payloads = { version = "0.13", features = ["kornia"] }
cu29-export = "0.13.0"
cu-gstreamer = { version = "0.13.0", features = ["gst"] }

tokio = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

gstreamer = { version = "0.24", features = ["v1_22"] }
gstreamer-app = { version = "0.24", features = ["v1_22"] }

chalkydri_core = { version = "0.1.0", path = "crates/chalkydri_core" }
chalkydri_subsys_capriltags = { version = "0.1.0", path = "crates/subsystems/capriltags" }
chalkydri_subsys_python = { version = "0.1.0", path = "crates/subsystems/python" }

# Compile dependencies with optimization level 3 even when in debug mode
# This can reduce the time required to build when actively developing and testing.
[profile.dev.package.'*']
opt-level = 3

# Compile everything with extreme optimizations when in release mode
[profile.release]
# Optimization level 3 is the most extreme level of optimization.
# It isn't *always* the most optimized for every codebase, but I haven't bothered testing.
# TODO: do that testing
opt-level = 3
# Link Time Optimization
#lto = true
# Strip extra symbols (used for debugging and such)
strip = true
# Code generation-- only 1 worker generates more optimized code in theory
codegen-units = 1
