[package]
name = "chalkydri_apriltags"
license.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
cu-sensor-payloads = { workspace = true, features = ["image"] }
cu29.workspace = true
apriltag = { branch = "master", git = "https://github.com/chalkydri/apriltag-rust.git" }
apriltag-sys = { branch = "master", git = "https://github.com/chalkydri/apriltag-rust.git" }
cu-spatial-payloads = "0.12.0"
arrayvec = "0.7.6"
serde.workspace = true
cu-bincode = { version = "2.0.2", features = ["serde"] }
image = "0.25.9"
anyhow = "1.0.100"
