[package]
name = "chalkydri_apriltags"
license.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
cu-sensor-payloads = { workspace = true, features = ["image"] }
cu29.workspace = true
apriltag = { branch = "master", git = "https://github.com/chalkydri/apriltag-rust.git" }
apriltag-sys = { branch = "master", git = "https://github.com/chalkydri/apriltag-rust.git" }
cu-spatial-payloads = "0.12.0"
arrayvec = "0.7.6"
serde = { workspace = true, features = ["derive"] }
cu-bincode = { version = "2.0.2", features = ["serde"] }
image = "0.25.9"
anyhow = "1.0.100"
chalkydri_sqpnp = { version = "0.1.1", path = "../chalkydri_sqpnp" }
serde_json.workspace = true
chalkydri_core.workspace = true
nalgebra = "0.34.1"
whacknet = { version = "0.1.0", path = "../whacknet" }

