[package]
name = "chalkydri-apriltags"
description = "Chalkydri AprilTags implementation"
license = "GPL-3.0"
version = "0.1.0"
edition = "2021"

[dependencies]
bumpalo = { version = "3.16.0", features = ["collections", "std"] }
image = { version = "0.25.1", default-features = false, features = ["png"] }
libm = "0.2.8"
nalgebra = { version = "0.32.5", features = ["sparse"] }
rayon = "1.10.0"
rerun = { version = "0.17.0", optional = true, default-features = false, features = ["sdk", "server"] }
ril = { version = "0.10.1", features = ["png"] }

[features]
default = ["rerun"]
rerun = ["dep:rerun"]

