[package]
name = "chalkydri-apriltags"
description = "Chalkydri AprilTags implementation"
license = "GPL-3.0"
version = "0.1.0"
edition = "2021"

[dependencies]
image = { version = "0.25.1", default-features = false, features = ["png"] }
libblur = { version = "0.17.1", features = ["fft", "nightly_avx512"] }
libm = "0.2.8"
nalgebra = { version = "0.33.0", features = ["sparse"] }
rayon = "1.10.0"
rerun = { version = "0.22.0", optional = true, default-features = false, features = ["sdk", "server"] }
ril = { version = "0.10.1", features = ["png"] }
statrs = { version = "0.18.0", default-features = false }

[features]
default = []
rerun = ["dep:rerun"]

[[bench]]
name = "main"
path = "bench.rs"
harness = false

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[profile.release]
opt-level = 3
lto = true
strip = true

[profile.bench]
inherits = "release"

