[package]
name = "tfledge"
description = "Chalkydri TFLite and libedgetpu bindings"
version = "0.0.0"
license = "GPL-3.0"
edition = "2021"
build = "build.rs"

[dependencies]
env_logger = "0.11.3"
libc = "0.2.154"
log = "0.4.21"
rgb = "0.8.37"

[features]
default = ["throttled"]
__bindgen = []
direct = []
throttled = []

[build-dependencies]
bindgen = "0.71.1"

