[package]
name = "chalkydri"
description = "A blazingly fast FRC vision system"
license.workspace = true
version.workspace = true
edition.workspace = true

[features]
#default = ["python", "capriltags", "web"]
#default = ["python", "web"]
default = ["web"]
#default = []
#apriltags = ["dep:chalkydri-apriltags"]
#ml = ["dep:tfledge"]
python = ["dep:chalkydri_subsys_python"]
web = ["dep:actix-web", "dep:utoipa"]

# AprilTags C library
#capriltags = ["dep:apriltag"]

rerun = ["dep:re_sdk", "dep:re_types", "dep:re_ws_comms"]
rerun_web_viewer = ["rerun", "dep:re_web_viewer_server", "re_sdk/web_viewer", "re_ws_comms/server"]
tokio-console = ["dep:console-subscriber"]

[[bin]]
name = "logread"
path = "src/bin/logread.rs"

[dependencies]
#tfledge = { version = "*", path = "../chalkydri-tfledge", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "signal"] }
#chalkydri-apriltags = { version = "*", optional = true, path = "../chalkydri-apriltags" }
serde.workspace = true
actix-web = { version = "4.5.1", optional = true }
#minint = { version = "*", path = "../minint" }
utoipa = { version = "5.2.0", optional = true, features = ["actix_extras"] }
serde_json.workspace = true
re_web_viewer_server = { version = "0.25.1", optional = true }
re_ws_comms = { version = "0.22.0", optional = true }
mimalloc = { version = "0.1.43", features = ["override"] }
camera-intrinsic-calibration = { git = "https://github.com/chalkydri/camera-intrinsic-calibration-rs.git", branch = "main" }
camera-intrinsic-model = { git = "https://github.com/chalkydri/camera-intrinsic-model-rs.git", branch = "main" }
aprilgrid = { git = "https://github.com/chalkydri/aprilgrid-rs.git", branch = "master" }
sqpnp_simple = "0.1.5"
re_sdk = { version = "0.28.2", optional = true }
re_types = { version = "0.25.1", features = ["image"], optional = true }
gstreamer.workspace = true
gstreamer-app.workspace = true
#gstreamer-video = { version = "0.23.4", features = ["v1_22"] }
#gstreamer-base = { version = "0.23.4", features = ["v1_22"] }
rust-embed = { version = "8.5.0", features = ["actix"] }
mime_guess = "2.0.5"
futures-core.workspace = true
futures-util = "0.3.31"
rustix = { version = "1.1.2", features = ["all-apis"] }
futures-executor = "0.3.31"
sysinfo = "0.37.2"
libblur = "0.20.0"
nalgebra = { version = "0.33.2", default-features = false, features = ["matrixmultiply", "rayon"] }
image = "0.25.5"
tracing = { workspace = true, features = ["async-await"] }
tracing-subscriber.workspace = true
turbojpeg = { version = "1.3.0", default-features = false, features = ["cmake", "pkg-config"] }
#sophus_autodiff = { version = "0.15.0", features = ["simd"] }
#sophus_lie = { version = "0.15.0", features = ["simd"] }
quanta = "0.12.5"
nt_client.workspace = true
tokio-util = { version = "0.7.16", features = ["rt"] }
#kornia-tensor = { git = "https://github.com/kornia/kornia-rs", tag = "v0.1.9" }
#kornia-tensor-ops = { git = "https://github.com/kornia/kornia-rs", tag = "v0.1.9" }
kornia-io = { git = "https://github.com/kornia/kornia-rs", tag = "v0.1.9" }
kornia-image = { git = "https://github.com/kornia/kornia-rs", tag = "v0.1.9" }
kornia-imgproc = { git = "https://github.com/kornia/kornia-rs", tag = "v0.1.9" }
kornia-icp = { git = "https://github.com/kornia/kornia-rs", tag = "v0.1.9" }
#kornia-linalg = { git = "https://github.com/kornia/kornia-rs", tag = "v0.1.9" }
kornia-3d = { git = "https://github.com/kornia/kornia-rs", tag = "v0.1.9" }
console-subscriber = { version = "0.4.1", optional = true }
chalkydri_core = { workspace = true, features = ["__openapi"] }
chalkydri_subsys_python = { workspace = true, optional = true }
chalkydri_config = { version = "0.1.0", path = "../chalkydri_config" }
tokio-stream = "0.1.17"
chalkydri_apriltags = { version = "0.1.0", path = "../apriltags" }
anyhow = "1.0.100"
cu29.workspace = true
cu29-helpers.workspace = true
cu-sensor-payloads.workspace = true
cu29-export.workspace = true
cu-gstreamer.workspace = true

[build-dependencies]
bindgen = { version = "*", default-features = false, features = ["runtime"] }
