[package]
name = "chalkydri"
description = "A blazingly fast FRC vision system"
license.workspace = true
version.workspace = true
edition.workspace = true

[features]
#default = ["python", "capriltags", "web"]
#default = ["python", "web"]
default = []
#default = []
#apriltags = ["dep:chalkydri-apriltags"]

# AprilTags C library
#capriltags = ["dep:apriltag"]

tokio-console = ["dep:console-subscriber"]

[[bin]]
name = "logread"
path = "src/bin/logread.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "signal"] }
serde.workspace = true
serde_json.workspace = true
mimalloc = { version = "0.1.43", features = ["override"] }
camera-intrinsic-calibration = { git = "https://github.com/chalkydri/camera-intrinsic-calibration-rs.git", branch = "main" }
camera-intrinsic-model = { git = "https://github.com/chalkydri/camera-intrinsic-model-rs.git", branch = "main" }
aprilgrid = { git = "https://github.com/chalkydri/aprilgrid-rs.git", branch = "master" }
gstreamer.workspace = true
gstreamer-app.workspace = true
#gstreamer-video = { version = "0.23.4", features = ["v1_22"] }
#gstreamer-base = { version = "0.23.4", features = ["v1_22"] }
futures-core.workspace = true
futures-util = "0.3.31"
rustix = { version = "1.1.2", features = ["all-apis"] }
futures-executor = "0.3.31"
sysinfo = "0.37.2"
libblur = "0.20.0"
nalgebra = { version = "0.33.2", default-features = false, features = ["matrixmultiply", "rayon"] }
image = "0.25.5"
tracing = { workspace = true, features = ["async-await"] }
tracing-subscriber.workspace = true
turbojpeg = { version = "1.3.0", default-features = false, features = ["cmake", "pkg-config"] }
quanta = "0.12.5"
tokio-util = { version = "0.7.16", features = ["rt"] }
#kornia-tensor = { git = "https://github.com/kornia/kornia-rs", tag = "v0.1.9" }
#kornia-tensor-ops = { git = "https://github.com/kornia/kornia-rs", tag = "v0.1.9" }
#kornia-linalg = { git = "https://github.com/kornia/kornia-rs", tag = "v0.1.9" }
console-subscriber = { version = "0.4.1", optional = true }
chalkydri_core = { workspace = true }
chalkydri_config = { version = "0.1.0", path = "../chalkydri_config" }
tokio-stream = "0.1.17"
chalkydri_apriltags = { version = "0.1.0", path = "../apriltags" }
anyhow = "1.0.100"
cu29.workspace = true
cu29-helpers.workspace = true
cu-sensor-payloads.workspace = true
cu29-export.workspace = true
cu-gstreamer.workspace = true
whacknet = { version = "0.1.0", path = "../whacknet" }

[build-dependencies]
bindgen = { version = "*", default-features = false, features = ["runtime"] }
