[package]
name = "chalkydri_core"
license.workspace = true
version.workspace = true
edition.workspace = true
publish = false

[features]
default = ["config"]

config = ["__toml", "__json"]

__serde = ["dep:serde"]
__toml = ["__serde", "dep:toml"]
__json = ["__serde", "dep:serde_json"]

[dependencies]
tokio = "1"
toml = { version = "0.8.12", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
snafu = "0.8.9"
tracing.workspace = true
parking_lot.workspace = true
futures-core.workspace = true
futures-executor = "0.3.31"
