[package]
name = "minint"
description = "A simple FRC NetworkTables v4 client library for Rust"
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "sync", "net", "time", "macros"] }
serde_json = "1"
tokio-tungstenite = { git = "https://github.com/chalkydri/tokio-tungstenite.git", branch = "master" }
serde = { version = "1", features = ["derive"] }
log = "0.4.21"
fastrand = "2.1.0"
futures-util = { version = "0.3.30", features = ["tokio-io", "sink"] }
rmp = "0.8.14"

[profile.release]
opt-level = 3
lto = true
strip = true
