[package]
name = "whacknet"
license.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
bytemuck = { version = "1.25.0", features = ["aarch64_simd", "avx512_simd", "const_zeroed", "derive"] }
chalkydri_core.workspace = true
cu-bincode = { version = "2.0.2", features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
