[package]
name = "chalkydri_subsys_python"
license.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
tracing.workspace = true
chalkydri_core.workspace = true
pyo3 = { version = "0.26.0", features = [
  "generate-import-lib",
	"auto-initialize",
] }
numpy = { version = "0.26.0" }
